    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Manage Products Title -->
        <TextView
            android:id="@+id/tvManageProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Manage Products"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:paddingBottom="16dp"/>


        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/search_category_border"
            app:layout_constraintTop_toBottomOf="@id/tvManageProducts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:iconifiedByDefault="false" />

        <!-- Filter by Category với viền -->
        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
        android:prompt="@string/category_prompt"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinnerSize"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"/>

        <!-- Filter by Size với viền -->
        <Spinner
            android:id="@+id/spinnerSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
        android:prompt="@string/size_prompt"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintStart_toEndOf="@id/spinnerCategory"
        app:layout_constraintEnd_toStartOf="@id/spinnerStatus"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"/>

        <!-- Filter by Status với viền -->
        <Spinner
            android:id="@+id/spinnerStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
        android:prompt="@string/status_prompt"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintStart_toEndOf="@id/spinnerSize"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

        <!-- Add Product Button -->
        <Button
            android:id="@+id/btnAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Product"
            app:layout_constraintTop_toBottomOf="@+id/spinnerStatus"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- RecyclerView for Products -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/btnAddProduct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
